--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ theme = "devfest-theme-hugo"
 enableEmoji = true
 enableRobotsTXT = true
 enableMissingTranslationPlaceholders = true
-
+disablePathToLower = true
 googleAnalytics = "UA-34571097-16"
 
 [params]
