footer and info

--- a/data/footer.yml
+++ b/data/footer.yml
@@ -6,41 +6,41 @@ share:
 
 follow:
   - name: facebook
-    url: https://www.facebook.com/GDGToulouse/
+    url: https://www.facebook.com/bsidestlv/
   - name: twitter
-    url: https://twitter.com/devfesttoulouse
+    url: https://twitter.com/bsidestlv
   - name: linkedin
-    url: https://www.linkedin.com/company/devfesttoulouse/
+    url: https://www.linkedin.com/company/bsidestlv/
   - name: youtube
-    url: https://www.youtube.com/channel/UCx83f-KzDd3o1QK2AdJIftg
+    url: https://www.youtube.com/channel/UCKcGZg3NT3iPEXuiLk15nrQ
 
 content:
   - title: footer_about
     links:
-      - name: GDG Toulouse
-        url: http://gdgtoulouse.fr/
-        newTab: true
-      - name: Google Developers Group
-        url: https://developers.google.com/
-        newTab: true
-      - name: Kit de communication
-        url: /kit/MediaKit.zip
-        newTab:
+      # - name: GDG Toulouse
+      #   url: http://gdgtoulouse.fr/
+      #   newTab: true
+      # - name: Google Developers Group
+      #   url: https://developers.google.com/
+      #   newTab: true
+      # - name: Kit de communication
+      #   url: /kit/MediaKit.zip
+      #   newTab:
       - nameKey: footer_coc
         url: /code-of-conduct/
         newTab: false
-
-  - title: footer_previous_edition
-    links:
-      - name: DevFest Toulouse 2018
-        url: https://2018.devfesttoulouse.fr/
-        newTab: true
-      - name: DevFest Toulouse 2017
-        url: https://2017.devfesttoulouse.fr/
-        newTab: true
-      - name: DevFest Toulouse 2016
-        url: https://2016.devfesttoulouse.fr/
-        newTab: true
+  #
+  # - title: footer_previous_edition
+  #   links:
+  #     - name: DevFest Toulouse 2018
+  #       url: https://2018.devfesttoulouse.fr/
+  #       newTab: true
+  #     - name: DevFest Toulouse 2017
+  #       url: https://2017.devfesttoulouse.fr/
+  #       newTab: true
+  #     - name: DevFest Toulouse 2016
+  #       url: https://2016.devfesttoulouse.fr/
+  #       newTab: true
 
 #  - title: footer_become_partners
 #    links:
