--- a/data/info.yml
+++ b/data/info.yml
@@ -1,7 +1,7 @@
 id: HJRThubF4uYPkb7jSUxi
 name: BSidesTLV 2020
 address:
-  formattedAddress: '11 Espl. Compans Caffarelli, 31000 Toulouse, France'
+  formattedAddress: 'Tel Aviv University Smolarz Auditorium'
   locality:
     short_name: BSidesTLV
     long_name: BSidesTLV
