--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ googleAnalytics = "UA-34571097-16"
     tags = "event, bsidestlv, bsides, telaviv, tel-aviv, security, cybersecurity"
     copyright = "We :heart:️ TLV"
     cfpUrl = "https://cfp.bsidestlv.com"
-    subscriptionUrl = "https://example.com/?subscribetobsides"
+    subscriptionUrl = "https://2020.bsidestlv.com/?subscribetobsidestlv"
     appleTouchIcon = "/apple-touch-icon.png"
     favicon32 = "/favicon-32x32.png"
     favicon16 = "/favicon-16x16.png"
