--- a/package.json
+++ b/package.json
@@ -5,5 +5,5 @@
   "repository": "https://github.com:bsidestlv/2020.bsidestlv.com",
   "author": "Omer Cohen <omer@bsidestlv.com>",
   "license": "MIT",
-  "private": true,
+  "private": true
 }
