--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
+        lfs: true
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
